--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,7 @@
 * text=auto
 
 # Custom for Visual Studio
-*.cs     diff=java
+*.cs     diff=csharp
 
 # Standard to msysgit
 *.doc	 diff=astextplain
